# fastapi-template

./: .env.tpl  .gitignore  CLAUDE.md  INDEX.md  README.md  alembic.ini  docker-compose.yml  justfile  pyproject.toml
.claude/rules/: adapters.md  domain-purity.md  entrypoints.md  service-layer.md
docs/: architecture.md
migrations/: env.py
src/api/: configuration.py  database.py
src/api/catalog/: settings.py
src/api/catalog/adapters/: orm.py  repositories.py
src/api/catalog/domain/: commands.py  enums.py  errors.py  events.py  models.py
src/api/catalog/entrypoints/: api.py  event_handlers.py  schemas.py
src/api/catalog/service_layer/: commands.py  queries.py
src/api/domain/auth/: enums.py  schemas.py
src/api/domain/base/: model.py
src/api/domain/items/: enums.py  models.py  repository.py  schemas.py
src/api/entrypoints/: _error_handlers.py  main.py  settings.py
src/api/ordering/: settings.py
src/api/ordering/adapters/: orm.py  repositories.py
src/api/ordering/domain/: commands.py  enums.py  errors.py  events.py  models.py
src/api/ordering/entrypoints/: api.py  event_handlers.py  schemas.py
src/api/ordering/service_layer/: commands.py  handlers.py  queries.py
src/api/rest/: __init__.py  dependencies.py  schemas.py
src/api/rest/controllers/: __init__.py
src/api/rest/controllers/auth/: dependencies.py  router.py
src/api/rest/controllers/items/: dependencies.py  router.py  schemas.py
src/api/shared/: settings.py
src/api/shared/domain/: errors.py  events.py  identifiers.py  patches.py  time.py
src/api/shared/entrypoints/: schemas.py
src/api/shared/infrastructure/: auth.py  bootstrap.py  database.py  dependencies.py  messagebus.py  repository.py  session.py  unit_of_work.py
tests/: conftest.py  factory.py  fakes.py
tests/architecture/: test_event_handlers_registered.py  test_lint_imports_runs.py  test_module_settings_env_prefix.py  test_no_orm_in_domain.py  test_routers_mounted.py  test_uow_wires_modules.py
tests/catalog/adapters/: test_product_repository.py
tests/catalog/domain/: test_product.py
tests/catalog/rest/: test_products_router.py
tests/catalog/service_layer/: test_commands.py
tests/integration/: test_app_composition.py  test_error_translation.py  test_event_delivery.py
tests/ordering/rest/: test_orders_router.py
tests/ordering/service_layer/: test_place_order.py
tests/rest/controllers/items/: test_router.py
