[project]
name = "api"
version = "0.1.1"
description = "FastAPI Domain Template"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "asyncpg>=0.30.0",
  "httpx>=0.28.1",
  "pydantic>=2.12.0",
  "pydantic-settings>=2.12.0",
  "sqlalchemy[asyncio]>=2.0.0",
  "uvicorn>=0.40.0",
  "uvloop>=0.22.0",
  "fastapi[standard]>=0.115.0",
]

[dependency-groups]
dev = [
  "ruff>=0.15.0",
  "pytest>=8.0.0",
  "pytest-asyncio>=0.25.0",
  "httpx>=0.28.1",
  "pytest-cov>=7.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.coverage.run]
relative_files = true

[tool.ruff]
exclude = [".venv"]

[lint]
ignore = ["PLW2901"]
